V3.1.1 修改历史版本底部图标加载过快时，不显示。
Change-Id: I6f06bf9b2a1d9a02bf0831e469a5bde3f8ad14dc